--- a/style.css
+++ b/style.css
@@ -13,9 +13,21 @@ body {
     font-family: 'Poppins';
     font-style: normal;
 }
+.container{
+    /* max-width: 1280px;  */
+    width: 85%;
+    /* margin-left: auto;
+    margin-right: auto;
+    flex-basis: 1280px;
+    flex-grow: 1; */
+    margin-inline: auto;
+}
 header{
-    padding-top: 64px;
-    padding-left: 80px;
+    /* padding-top: 64px;
+    padding-left: 80px; */
+    height: 25vh;
+    display: flex;
+    align-items: center;
 }
 main {
     flex: 1 0 auto;
@@ -29,8 +41,11 @@ main {
 .bg {
     max-width: 696px;
     width: 100%;
-    height: 493px;
+    height:50vh;
     background-image: url(./images/illustration-mockups.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 article {
@@ -79,12 +94,52 @@ article a:hover{
     color: #fff;
 }
 footer{
-    padding-bottom: 40px;
-    padding-right: 80px;
+   
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    height: 12.5%;
 }
 ul{
     display: flex;
     column-gap: 16px;
+}
+@media(max-width:1200px){
+h1{
+    font-size: 32px;
+}
+}
+@media(max-width:1000px){
+    header{
+        height: 15vh;
+    }
+    main{
+        flex-direction: column;
+    }
+    article{
+        flex-basis: auto;
+        min-height:fit-content;
+        text-align: center;
+        padding: 0;
+    }
+    h1{
+        font-size: 24px;
+        line-height: 26px;
+    }
+    p{
+        font-size: 16px;
+        line-height: 24px;
+    }
+    article a{
+        margin-inline: auto;
+    }
+    footer{
+        justify-content: center;
+        height: 20vh;
+    }
+}
+@media(max-width:500px){
+    .bg{
+        height: 35vh;
+    }
 }
